Version 3.1.5: POST-HIBERNATE REMOVAL